@@ -9,8 +9,8 @@ use lib 't/';
 use BB;
 
 my $c = $ENV{BBTEST_REPO}
-    ? "$ENV{BBTEST_REPO}/build/berrybrew"
-    : 'c:/repos/berrybrew/build/berrybrew';
+    ? "$ENV{BBTEST_REPO}/test/berrybrew"
+    : 'c:/repos/berrybrew/test/berrybrew';
 
 my @installed = BB::get_installed();
 my @avail = BB::get_avail();
