@@ -1,10 +1,10 @@
 use warnings;
 use strict;
 
-use File::Copy::Recursive qw(dircopy);
+use File::Path qw(rmtree);
 use Test::More;
 
-my $c = $ENV{BBTEST_REPO} ? "$ENV{BBTEST_REPO}/build/berrybrew" : 'c:/repos/berrybrew/build/berrybrew';
+my $c = $ENV{BBTEST_REPO} ? "$ENV{BBTEST_REPO}/test/berrybrew" : 'c:/repos/berrybrew/test/berrybrew';
 
 my $test_dir = 'c:/berrybrew/test';
 my $build_dir = 'c:/berrybrew/build';
@@ -14,5 +14,9 @@ my $o = `$c test clean dev`;
 like $o, qr/removed the build and test directories/, "clean dev ok";
 isnt -e $test_dir, 1, "clean dev: test dir gone";
 isnt -e $build_dir, 1, "clean dev: build dir gone";
+
+rmtree "$ENV{BBTEST_REPO}/test" or die $!;
+
+isnt -e "$ENV{BBTEST_REPO}/test", 1, "test build directory removed ok";
 
 done_testing();
